[project]
name = "atom_space_node"

[tool.isort]
py_version = 310
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
profile = "black"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.flake8]
show-source = true
extend-ignore = ["E501"]

[tool.mypy]
files = "*.py"

[tool.pyright]
pythonVersion = "3.10"
reportUnusedVariable = false
reportMissingImports = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pylint]
disable = "unused-argument"
