[project]
name = "hyperon_das_node"
version = "0.0.1"
description = "Distribuited Atom Space Node for Hyperon"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Pedro Costa", email = "pedrobc89@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/singnet/das-node"

[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=2.1.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.10+
wheel.py-api = "cp310"
