[project]
name = "hyperon_das_node"

[tool.isort]
py_version = 310
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
profile = "black"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.flake8]
show-source = true
max-line-length = 100
extend-ignore = ["E501", "E203"]
max-complexity = 10

[tool.mypy]
files = "*.py"
python_version = "3.10"
ignore_missing_imports = "true"
follow_imports = "silent"
check_untyped_defs = "true"
warn_redundant_casts = "true"
warn_unused_ignores = "true"
implicit_reexport = "true"
show_error_context = "true"
namespace_packages = "true"
pretty = "true"

[tool.pyright]
pythonVersion = "3.10"
reportUnusedVariable = false
reportMissingImports = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pylint]
disable = "unused-argument"

[tool.poetry]
name = "hyperon_das_node"
version = "0.0.1"
description = ""
readme = "README.md"
authors = ["Pedro Costa <pedrobc89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^2.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
pylint = "^3.2.6"
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.8.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
